syntax = "proto3";

option java_multiple_files = true;

package com.devProblems;

message Book {
  int32 book_id = 1;
  string title = 2;
  float price = 3;
  int32 pages = 4;
  int32 author_id = 5;
}

message Author {
  int32 author_id = 1;
  string first_name = 2;
  string last_name = 3;
  string gender = 4;
  int32 book_id = 5;
}

message BookReq{
  //  bytes bookReq = 1;
  int32 id = 1;
  string name = 2;
  int32 authorId = 3;
  string rollbackId = 4;
}

message BookResponse{
  bool bookResponse = 1;
}


message TransactionalResponse{
  bool response = 1;
}


message AgentChoreReq{
  int32 id = 1;
  string name = 2;
  string rollbackId = 3;
}

message AgentChoreRes{
  bool response = 1;
}

service BookAuthorService {

  //unary - synchronous
  //client will send one request and server will respond with one response.
  rpc getAuthor(Author) returns(Author){}

  //sever streaming - Asynchronous
  //client will send one request and server will send stream of response to the client.
  rpc getBooksByAuthor(Author) returns(stream Book){}

  //client streaming - Asynchronous
  //client will stream of request and server will respond with one response.
  rpc getExpensiveBook(stream Book) returns(Book){}

  //bi-directional streaming - Asynchronous
  //client will send stream of request and server will respond with stream of response.
  rpc getBooksByGender(stream Book) returns (stream Book) {}

  rpc saveBook(BookReq) returns (BookResponse);

  rpc transactionalRollBack (BookReq) returns (TransactionalResponse);
}


service AgentChoreService{
  rpc agentSave(AgentChoreReq) returns (AgentChoreRes);
}